# guitartune

./: .anjuta_sym_db.db  .tm_project2.cache  Makefile  ProjectHome.md  README  config.h  config.status  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  requests  traces.1
po/: Makefile
src/: Makefile  Makefile.am  Makefile.in  alsa_capture.c  callbacks.c  callbacks.h  dbus.c  dsp.c  main.c
src/.deps/: alsa_capture.Po  callbacks.Po  dbus.Po  dsp.Po  main.Po
trunk/: .anjuta_sym_db.db  AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
trunk/.anjuta/session/: anjuta.session  dock-layout.xml
trunk/autom4te.cache/: traces.0  traces.2
trunk/po/: Makefile  Makefile.in
trunk/resources/: guitartune.desktop
trunk/src/: Makefile  Makefile.am  Makefile.in  alsa_capture.c  alsa_capture.h  callbacks.c  dbus.c  dbus.h  dsp.c  dsp.h  guitar_alt.glade  guitartune.glade  main.c  scalpel.c
trunk/src/.deps/: alsa_capture.Po  callbacks.Po  dbus.Po  dsp.Po  main.Po
